--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,11 @@ body {
   font-family: sans-serif;
   color: #fafafa;
 
+  background-color: #191919;
   background-image: url("https://i.pinimg.com/originals/18/2a/f4/182af46d3d6be2802bdce0cf75a8c0f4.jpg");
   background-repeat: repeat;
-  background-position: center center;
-  /* background-size: 50%; */
+  background-position: bottom center;
+  background-size: 50%;
 }
 
 h1,h2,h3 {
@@ -26,7 +27,7 @@ a {
   color: dodgerblue;
 }
 a:hover, a:focus {
-  color: blue;
+  color: deepskyblue;
 }
 
 p {
@@ -49,9 +50,6 @@ ul {
 }
 
 @media (max-width: 600px) {
-  body {
-    /* background-size: 100%; */
-  }
   .container {
     margin: 0 auto;
     border-radius: 0;
