--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,16 @@ ul {
 .material-icons {
   vertical-align: middle;
 }
+
+.spin {
+  animation: spin 2s infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
